--- a/responsive-web-design/10-tribute-page-certification-project/styles.css
+++ b/responsive-web-design/10-tribute-page-certification-project/styles.css
@@ -1,34 +1,57 @@
-.image {
-    max-width: 100%;
-    height: auto;
-}
-
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
     'Helvetica Neue', Arial, sans-serif;
-    color: rgb(200, 195, 188);
-    text-align: center;
+    font-size: 1.15rem;
     line-height: 1.5;
+    text-align: center;
+    color: #333;
+    margin: 0;
 }
 
-.title {
+#main {
+    margin: 30px 8px;
+    padding: 15px;
+    border-radius: 5px;
+    background: #eee;
+}
+
+#title {
     font-size: 4rem;
+    margin-bottom: 0;
 }
 
-/* .main {
-    display: flex;
-    justify-content: center;
-} */
+#img-div {
+    background: white;
+    padding: 10px;
+    margin: 0;
+}
 
-.tribute-info {
-    max-width: 25%;
+img {
+    max-width: 100%;
+    display: block;
+    height: auto;
+    margin: 0 auto;
+}
+
+#img-caption {
+    margin: 15px 0 5px 0;
+}
+
+#headline {
+    margin: 50px 0;
+    text-align: center;
 }
 
 ul {
-    text-align: left;
     max-width: 550px;
+    margin: 0 auto 50px auto;
+    text-align: left;
+    line-height: 1.6;
 }
 
-.dates {
-    font-weight: bold;
+blockquote {
+    font-style: italic;
+    max-width: 545px;
+    margin: 0 auto 50px auto;
+    text-align: left;
 }
